# how-bootcamp-data-engineer-exercises

./: README.md
.ipynb_checkpoints/: tse-votes-check-checkpoint.ipynb
api-job-jenkins/: .gitignore  README.md  docker-compose.yml  dockerfile
api-requests/: api-requests.ipynb  main.py
aws-sns-messenger-ingestor/: README.md  consumer.py  messenger.py
aws_account_boto/: aws.py  main.ipynb
beautiful-soup-extraction-exercises/: podcast.py  podcast_database.csv  real_state.py  real_state_database.csv  real_state_notebook.ipynb
challenge-aws/: Untitled.ipynb  main.py
data_ingestion_exercise/: README.md  main.py  requirements.txt
lottery-exercise/: README.md  main.py
oop-data-ingestion/: apis.py  ingestion.py  ingestors.py  oop.py
oop-data-ingestion-tests/: .gitignore  Makefile  README.md  requirements.txt  writers.py
oop-data-ingestion-tests-aws/: .gitignore  Makefile  README.md  oop-data-ingestion-tests-aws.drawio  pyproject.toml  zappa_deploy_policy.json
oop-data-ingestion-tests-aws-github-actions/: Makefile  README.md  aws_lambda_policy_basic_execution_role_example.json  pyproject.toml  pytest.ini  zappa_settings.json  zappa_settings_bkp.json
oop-data-ingestion-tests-aws/mercado_bitcoin/: apis.py  checkpoint.py  ingestors.py  lambda_function.py  main.py  principles.py  writers.py
oop-data-ingestion-tests-aws/tests/: test_apis.py  test_integration.py
rds-dbs-module-12-13-exercise/: README.md  insert.py
selenium-introduction/: README.md  all_movies.py  main.py  requirements.txt
sql-docker-exercise/: Dockerfile  README.md  docker-compose.yml  (+3 more)
(+83 files in other folders)
